@@ -1384,6 +1384,8 @@ ssize_t gnutls_record_set_max_size(gnutls_session_t session, size_t size);
 size_t gnutls_record_check_pending(gnutls_session_t session);
 size_t gnutls_record_check_corked(gnutls_session_t session);
 
+int gnutls_record_set_max_early_data_size(gnutls_session_t session, size_t size);
+
 void gnutls_session_force_valid(gnutls_session_t session);
 
 int gnutls_prf(gnutls_session_t session,
